# checkers

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: game.cpp  game.hpp  main.cpp
