cmake_minimum_required(VERSION 3.10)
project( checkers )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable( checkers src/main.cpp src/game.cpp )
target_link_libraries( checkers ${OpenCV_LIBS} )
